--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <!doctype html>
 <html
   lang="en"
-  class="page"
+  class="page page--theme--pink1"
 >
   <head>
     <meta charset="UTF-8" />
@@ -38,17 +38,22 @@
     <!-- #region header -->
     <header class="header">
       <div class="header__top">
-        <div class="header__logo--wrapper">
-          <a
-            href="#"
-            class="header__logo"
-          >
-            <img
-              src="./images/mainlogo.png"
-              alt="LOGO"
-              class="header__logo--link"
-            />
-          </a>
+        <div class="header__start">
+          <div class="header__logo-wrapper">
+            <a
+              href="#"
+              class="header__logo"
+            >
+              <img
+                src="./images/mainlogo.png"
+                alt="LOGO"
+                class="header__logo-link logo-global"
+              />
+            </a>
+          </div>
+          <div class="theme--switcher">
+
+          </div>
         </div>
         <nav class="nav">
           <ul class="nav__list">
@@ -83,7 +88,7 @@
                 class="icon--cookie"
               />
               <a
-                href="#contact-us"
+                href="tel:(704) 555-0127"
                 class="nav__link--active"
               >
                 Contact Us
@@ -116,13 +121,10 @@
         </div>
 
         <div class="header__button">
-          <img
-            src="./images/Icon-cookie.png"
-            alt="Cookie"
-          />
+          <div class="header__button-cookie"></div>
           <a
             href="#"
-            class="header__learn"
+            class="header__button-learn"
           >
             Learn more
           </a>
@@ -139,12 +141,12 @@
         <div class="menu__logo--wrapper">
           <a
             href="#"
-            class="menu__logo"
+            class="menu__logo logo-global"
           >
             <img
               src="./images/mainlogo.png"
               alt="LOGO"
-              class="menu__logo--link"
+              class="menu__logo-link"
             />
           </a>
         </div>
@@ -159,41 +161,41 @@
         </a>
       </div>
 
-      <div class="menu__nav">
-        <ul class="menu__nav__list">
-          <li class="menu__nav__item">
+      <div class="menu-nav">
+        <ul class="menu-nav__list">
+          <li class="menu-nav__item">
             <a
               href="#products"
-              class="menu__nav__link"
+              class="menu-nav__link"
             >
               Products
             </a>
           </li>
-          <li class="menu__nav__item">
+          <li class="menu-nav__item">
             <a
               href="#about-us"
-              class="menu__nav__link"
+              class="menu-nav__link"
             >
               About Us
             </a>
           </li>
-          <li class="menu__nav__item">
+          <li class="menu-nav__item">
             <a
               href="#blog"
-              class="menu__nav__link"
+              class="menu-nav__link"
             >
               Blog
             </a>
           </li>
-          <li class="menu__nav__item--active">
+          <li class="menu-nav__item--active">
             <img
               src="./images/Icon-phone.png"
               alt="Cookie"
               class="icon icon--cookie"
             />
             <a
-              href="#contact_us"
-              class="menu__nav__link--active"
+              href="tel:(629) 555-0129"
+              class="menu-nav__link--active"
             >
               Contact Us
             </a>
@@ -427,16 +429,16 @@
           <img
             src="./images/Logo-w.png"
             alt="LOGO"
-            class="footer__menu-logo-link"
+            class="footer__menu-logo-link logo-global"
           />
         </a>
 
-        <ul class="menu__nav__list">
+        <ul class="menu-nav__list">
           <li class="footer__nav__item-w footer__contact-us-ul-w">Menu</li>
           <li class="footer__nav__item">
             <a
               href="#products"
-              class="menu__nav__link"
+              class="menu-nav__link"
             >
               Products
             </a>
@@ -468,95 +470,89 @@
         </ul>
       </div>
       <div class="footer__contact-us">
-        <h2 class="footer__contact-us-title section__title">Contact us</h2>
-        <ul class="footer__contact-us-calls footer__contact-us-ul">
-          <li class="footer__contact-us-call footer__contact-us-ul-w">
-            Call us
-          </li>
-          <li class="footer__contact-us-call">
-            <a
-              href="#"
-              class="footer__contact-us-call-item"
-            >
-              (629) 555-0129
-            </a>
-          </li>
-          <li class="footer__contact-us-call">
-            <a
-              href="#"
-              class="footer__contact-us-call-item"
-            >
-              (603) 555-0123
-            </a>
-          </li>
-          <li class="footer__contact-us-call">
-            <a
-              href="#"
-              class="footer__contact-us-call-item"
-            >
-              (704) 555-0127
-            </a>
-          </li>
-        </ul>
-        <ul class="footer__contact-us-emails footer__contact-us-ul">
-          <li class="footer__contact-us-email footer__contact-us-ul-w">
-            Email us
-          </li>
-          <li class="footer__contact-us-email">
-            <a
-              href="#"
-              class="footer__contact-us-email-item"
-            >
-              bakerlab@example.com
-            </a>
-          </li>
-        </ul>
+        <p class="footer__contact-us-title section__title">Contact us</p>
+        <div class="footer__contact-us-ul">
+          <ul class="footer__contact-us-calls footer__contact-us-ul">
+            <li class="footer__contact-us-call footer__contact-us-ul-w">
+              Call us
+            </li>
+            <li class="footer__contact-us-call">
+              <a
+                href="tel:6295550121"
+                class="footer__contact-us-call-item"
+              >
+                (629) 555-0129
+              </a>
+            </li>
+            <li class="footer__contact-us-call">
+              <a
+                href="tel:(603) 555-0123"
+                class="footer__contact-us-call-item"
+              >
+                (603) 555-0123
+              </a>
+            </li>
+            <li class="footer__contact-us-call">
+              <a
+                href="tel:(704) 555-0127"
+                class="footer__contact-us-call-item"
+              >
+                (704) 555-0127
+              </a>
+            </li>
+          </ul>
+          <ul class="footer__contact-us-emails footer__contact-us-ul">
+            <li class="footer__contact-us-email footer__contact-us-ul-w">
+              Email us
+            </li>
+            <li class="footer__contact-us-email">
+              <a
+                href="mailto:bakerlab@example.com"
+                class="footer__contact-us-email-item"
+              >
+                bakerlab@example.com
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
-      <div class="footer__contact-us-media" id="blog">
+      <div
+        class="footer__contact-us-media"
+        id="blog"
+      >
         <div class="footer__contact-us-media-content">
           <a
-            href="#"
+            href="https://www.facebook.com/" target="_blank"
             class="footer__contact-us-media-content-a"
           >
             <div class="footer__contact-us-media-content-img-wrapper">
-              <img
-                src="./images/Icon-facebook.png"
-                alt="facebook"
-                class="footer__contact-us-media-content-img"
-              />
+              <div class="footer__contact-us-media-content-img-face">
+              </div>
             </div>
           </a>
           <a
-            href="#"
+            href="https://www.instagram.com/" target="_blank"
             class="footer__contact-us-media-content-a"
           >
             <div class="footer__contact-us-media-content-img-wrapper">
-              <img
-                src="./images/Icon-instagram.png"
-                alt="facebook"
-                class="footer__contact-us-media-content-img"
-              />
+              <div class="footer__contact-us-media-content-img-inst">
+              </div>
             </div>
           </a>
           <a
-            href="#"
+            href="https://twitter.com/" target="_blank"
             class="footer__contact-us-media-content-a"
           >
             <div class="footer__contact-us-media-content-img-wrapper">
-              <img
-                src="./images/Icon-twitter.png"
-                alt="facebook"
-                class="footer__contact-us-media-content-img"
-              />
+              <div class="footer__contact-us-media-content-img-twit">
+              </div>
             </div>
           </a>
         </div>
       </div>
 
       <div class="footer__bakerlab">
-        <p class="footer__bakerlab-content">
-          © Bakerlab 2022
-        </p>
+        <p class="footer__bakerlab-content">© Bakerlab 2022</p>
       </div>
     </footer>
     <!-- #endregion -->
