--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
     <title>Bakerlab</title>
     <link
       rel="stylesheet"
-      href="./styles/main.css"
+      href="styles/index.css"
     />
   </head>
   <body>
@@ -41,7 +41,7 @@
         <div class="creative_bakery__paragraph">
           We bake your fantasies — croissants, cakes, cookies, and cupcakes.
         </div>
-        <h1>Creative bakery</h1>
+        <h1 class="creative_bakery__title">Creative bakery</h1>
         <div class="creative_bakery__cookie"></div>
         <div class="creative_bakery__learn_more">
           <a
@@ -52,14 +52,14 @@
               src="images/cookie_icon.png"
               alt="cookie"
             />
-            <span>Learn more</span>
+            <span class="learn_more__text">Learn more</span>
           </a>
         </div>
       </div>
 
       <div class="what_we_bake">
-        <h1>What we bake</h1>
-        <p>
+        <h1 class="what_we_bake__title">What we bake</h1>
+        <p class="what_we_bake__text">
           We can customize our cookies right for your needs. Just imagine it
         </p>
         <div class="what_we_bake__examples">
@@ -70,8 +70,8 @@
                 src="images/we_bake_1.png"
                 alt="cakes"
               />
-              <h3>Cakes</h3>
-              <p>
+              <h3 class="what_we_bake__good_name">Cakes</h3>
+              <p class="what_we_bake__good_text">
                 Oatmeal cookies with golden raisins, orange zest and chocolate
                 chips
               </p>
@@ -84,7 +84,7 @@
                   src="images/arrow_right_icon.png"
                   alt="arrow-right"
                 />
-                <span>Order</span>
+                <span class="order_link__text">Order</span>
               </a>
             </div>
             <div class="what_we_bake__cakes_2">
@@ -93,8 +93,8 @@
                 src="images/we_bake_2.png"
                 alt="cakes"
               />
-              <h3>Cakes</h3>
-              <p>
+              <h3 class="what_we_bake__good_name">Cakes</h3>
+              <p class="what_we_bake__good_text">
                 Chocolate biscuit coffee cake topped with a buttercream and
                 powder
               </p>
@@ -107,7 +107,7 @@
                   src="images/arrow_right_icon.png"
                   alt="arrow-right"
                 />
-                <span>Order</span>
+                <span class="order_link__text">Order</span>
               </a>
             </div>
           </div>
@@ -119,8 +119,8 @@
                 src="images/we_bake_3.png"
                 alt="donuts"
               />
-              <h3>Donuts</h3>
-              <p>
+              <h3 class="what_we_bake__good_name">Donuts</h3>
+              <p class="what_we_bake__good_text">
                 Light multi-layered croissant strewn with cinammon and almond
                 “petals”
               </p>
@@ -133,7 +133,7 @@
                   src="images/arrow_right_icon.png"
                   alt="arrow-right"
                 />
-                <span>Order</span>
+                <span class="order_link__text">Order</span>
               </a>
             </div>
             <div class="what_we_bake__donuts_2">
@@ -142,8 +142,8 @@
                 src="images/we_bake_4.png"
                 alt="donuts"
               />
-              <h3>Donuts</h3>
-              <p>Light multi-layered croissant strewn with coconut and nuts</p>
+              <h3 class="what_we_bake__good_name">Donuts</h3>
+              <p class="what_we_bake__good_text">Light multi-layered croissant strewn with coconut and nuts</p>
               <a
                 href="#"
                 class="order_link"
@@ -153,8 +153,7 @@
                   src="images/arrow_right_icon.png"
                   alt="arrow-right"
                 />
-                <span>Order</span>
-                <span>Order</span>
+                <span class="order_link__text">Order</span>
               </a>
             </div>
           </div>
@@ -166,8 +165,8 @@
                 src="images/we_bake_5.png"
                 alt="cookies"
               />
-              <h3>Cakes</h3>
-              <p>OChocolate salted caramel, Vanilla frutti pebbles</p>
+              <h3 class="what_we_bake__good_name">Cakes</h3>
+              <p class="what_we_bake__good_text">OChocolate salted caramel, Vanilla frutti pebbles</p>
               <a
                 href="#"
                 class="order_link"
@@ -177,7 +176,7 @@
                   src="images/arrow_right_icon.png"
                   alt="arrow-right"
                 />
-                <span>Order</span>
+                <span class="order_link__text">Order</span>
               </a>
             </div>
             <div class="what_we_bake__cookies_2">
@@ -186,8 +185,8 @@
                 src="images/we_bake_6.png"
                 alt="cookies"
               />
-              <h3>Cookies</h3>
-              <p>
+              <h3 class="what_we_bake__good_name">Cookies</h3>
+              <p class="what_we_bake__good_text">
                 Oatmeal cookies with golden raisins, orange zest and chocolate
                 chips
               </p>
@@ -200,7 +199,7 @@
                   src="images/arrow_right_icon.png"
                   alt="arrow-right"
                 />
-                <span>Order</span>
+                <span class="order_link__text">Order</span>
               </a>
             </div>
           </div>
@@ -214,12 +213,12 @@
           alt="crumbs"
         />
         <div class="about_us__text_info">
-          <h1>
+          <h1 class="about_us__title">
             Few words
             <br />
             About us
           </h1>
-          <p>
+          <p class="about_us__text">
             Like many design teams, Onfido made the transition from Abstract +
             Sketch, to Figma in the last couple of years. One of the common
             resistance points internally before making that switch, was Figma’s
@@ -231,22 +230,22 @@
 
         <div class="about_us__data_info">
           <div class="about_us__year">
-            <h2>2015</h2>
+            <h2 class="data_title">2015</h2>
             <span class="data_span">Foundation year</span>
           </div>
 
           <div class="about_us__stores">
-            <h2>23</h2>
+            <h2 class="data_title">23</h2>
             <span class="data_span">Stores</span>
           </div>
 
           <div class="about_us__companies">
-            <h2>155</h2>
+            <h2 class="data_title">155</h2>
             <span class="data_span">Companies</span>
           </div>
 
           <div class="about_us__clients">
-            <h2>10k+</h2>
+            <h2 class="data_title">10k+</h2>
             <span class="data_span">Clients</span>
           </div>
         </div>
@@ -256,8 +255,8 @@
     <footer>
       <div class="company_navigation">
         <div class="company_navigation__logo"></div>
-        <nav>
-          <ul>
+        <nav class="company_navigation__element">
+          <ul class="company_navigation__accurate_list">
             <li class="link_item"><a href="#">Products</a></li>
             <li class="link_item"><a href="#">Menu</a></li>
             <li class="link_item"><a href="#">About Us</a></li>
@@ -281,20 +280,20 @@
         </div>
       </div>
       <div class="contact_us">
-        <h1>Contact us</h1>
+        <h1 class="contact_us__title">Contact us</h1>
         <div class="contact_us__contacts_lists">
-          <ul>
+          <ul class="contact_us__accurate_list">
             <li class="link_item"><a href="#">Call us</a></li>
             <li class="link_item"><a href="#">(629) 555-0129</a></li>
             <li class="link_item"><a href="#">(603) 555-0123</a></li>
             <li class="link_item"><a href="#">(704) 555-0127</a></li>
           </ul>
-          <ul>
+          <ul class="contact_us__accurate_list">
             <li class="link_item"><a href="#">Email us</a></li>
             <li class="link_item"><a href="#">bakerlab@example.com</a></li>
           </ul>
         </div>
-        <p>© Bakerlab 2022</p>
+        <p class="copyrights">© Bakerlab 2022</p>
       </div>
     </footer>
     <script src="scripts/main.js"></script>
