--- a/src/index.html
+++ b/src/index.html
@@ -51,9 +51,7 @@
               />
             </a>
           </div>
-          <div class="theme--switcher">
-
-          </div>
+          <div class="theme--switcher"></div>
         </div>
         <nav class="nav">
           <ul class="nav__list">
@@ -110,14 +108,16 @@
         <p class="header__discription">
           We bake your fantasies — croissants, cakes, cookies, and cupcakes.
         </p>
-        <h1 class="header__title">Creative bakery</h1>
+        <div class="header__main">
+          <h1 class="header__title">Creative bakery</h1>
 
-        <div class="header__img">
-          <img
-            src="./images/BigCookie.png"
-            alt="Cookie"
-            class="header__img-link"
-          />
+          <div class="header__img">
+            <img
+              src="./images/BigCookie.png"
+              alt="Cookie"
+              class="header__img-link"
+            />
+          </div>
         </div>
 
         <div class="header__button">
@@ -446,7 +446,7 @@
           <li class="footer__nav__item">
             <a
               href="#about-us"
-              class="footer__nav__link"
+              class="menu-nav__link"
             >
               About Us
             </a>
@@ -454,7 +454,7 @@
           <li class="footer__nav__item">
             <a
               href="#blog"
-              class="footer__nav__link"
+              class="menu-nav__link"
             >
               Blog
             </a>
@@ -462,7 +462,7 @@
           <li class="footer__nav__item">
             <a
               href="#TermsPrivacy"
-              class="footer__nav__link footer__nav__link--active"
+              class="menu-nav__link footer__nav__link--active"
             >
               Terms & Privacy
             </a>
@@ -522,30 +522,30 @@
       >
         <div class="footer__contact-us-media-content">
           <a
-            href="https://www.facebook.com/" target="_blank"
+            href="https://www.facebook.com/"
+            target="_blank"
             class="footer__contact-us-media-content-a"
           >
             <div class="footer__contact-us-media-content-img-wrapper">
-              <div class="footer__contact-us-media-content-img-face">
-              </div>
+              <div class="footer__contact-us-media-content-img-face"></div>
             </div>
           </a>
           <a
-            href="https://www.instagram.com/" target="_blank"
+            href="https://www.instagram.com/"
+            target="_blank"
             class="footer__contact-us-media-content-a"
           >
             <div class="footer__contact-us-media-content-img-wrapper">
-              <div class="footer__contact-us-media-content-img-inst">
-              </div>
+              <div class="footer__contact-us-media-content-img-inst"></div>
             </div>
           </a>
           <a
-            href="https://twitter.com/" target="_blank"
+            href="https://twitter.com/"
+            target="_blank"
             class="footer__contact-us-media-content-a"
           >
             <div class="footer__contact-us-media-content-img-wrapper">
-              <div class="footer__contact-us-media-content-img-twit">
-              </div>
+              <div class="footer__contact-us-media-content-img-twit"></div>
             </div>
           </a>
         </div>
