add header and first section

--- a/src/index.html
+++ b/src/index.html
@@ -6,14 +6,65 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
-    <title>Title</title>
+    <link
+      rel="preconnect"
+      href="https://fonts.googleapis.com"
+    />
+    <link
+      rel="preconnect"
+      href="https://fonts.gstatic.com"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+      rel="stylesheet"
+    />
+    <title>Creative Bakery</title>
     <link
       rel="stylesheet"
       href="./styles/main.scss"
     />
   </head>
   <body>
-    <h1>Hello Mate Academy</h1>
     <script src="scripts/main.js"></script>
+    <header class="header">
+      <img
+        class="header_logo"
+        src="./images/logo.png"
+        alt="logo"
+      />
+      <nav>
+        <ul class="header_nav">
+          <li>Products</li>
+          <li>About Us</li>
+          <li>Blog</li>
+          <li>CONTACT US</li>
+        </ul>
+      </nav>
+      <a href="#">
+        <img
+          src="./images/menu.png"
+          alt="menu"
+        />
+      </a>
+    </header>
+    <main class="content">
+      <section class="firstSection">
+        <img
+          src="./images/cookie.png"
+          alt="cookie"
+        />
+        <span>
+          We bake your fantasies — croissants, cakes, cookies, and cupcakes.
+        </span>
+        <h1>Creative bakery</h1>
+        <button>Learn more</button>
+      </section>
+      <section>
+        <h2>What we bake</h2>
+      </section>
+      <section>
+        <h2>Few words about us</h2>
+      </section>
+    </main>
   </body>
 </html>
