add all sections

--- a/src/index.html
+++ b/src/index.html
@@ -27,20 +27,58 @@
   <body>
     <script src="scripts/main.js"></script>
     <header class="header">
-      <img
-        class="header_logo"
-        src="./images/logo.png"
-        alt="logo"
-      />
+      <a href="#">
+        <img
+          class="header_logo"
+          src="./images/logo.png"
+          alt="logo"
+        />
+      </a>
+
       <nav>
         <ul class="header_nav">
-          <li>Products</li>
-          <li>About Us</li>
-          <li>Blog</li>
-          <li>CONTACT US</li>
+          <li>
+            <a
+              class="header_nav_link"
+              href="#products"
+            >
+              Products
+            </a>
+          </li>
+          <li>
+            <a
+              class="header_nav_link"
+              href="#about"
+            >
+              About Us
+            </a>
+          </li>
+          <li>
+            <a
+              class="header_nav_link"
+              href="#blog"
+            >
+              Blog
+            </a>
+          </li>
+          <li>
+            <a
+              class="header_nav_contactlink"
+              href="#"
+            >
+              <img
+                src="./images/phone.png"
+                alt="phone"
+              />
+              CONTACT US
+            </a>
+          </li>
         </ul>
       </nav>
-      <a href="#">
+      <a
+        class="header_burgermenu"
+        href="#"
+      >
         <img
           src="./images/menu.png"
           alt="menu"
@@ -59,11 +97,202 @@
         <h1>Creative bakery</h1>
         <button>Learn more</button>
       </section>
-      <section>
-        <h2>What we bake</h2>
+      <section
+        class="productsSection"
+        id="products"
+      >
+        <div>
+          <h2 class="sectionTitle">What we bake</h2>
+          <span>
+            We can customize our cookies right for your needs. Just imagine it
+          </span>
+        </div>
+        <div class="productsSection_row">
+          <div class="product">
+            <img
+              class="product_image"
+              src="./images/p1.png"
+              alt="p1"
+            />
+            <div class="product_description">
+              <span class="product_description_category">Cakes</span>
+              <span>
+                Oatmeal cookies with golden raisins, orange zest and chocolate
+                chips
+              </span>
+            </div>
+            <a
+              class="product_link"
+              href="#"
+            >
+              <img
+                src="./images/arrow.svg"
+                alt="arrow"
+              />
+              Order
+            </a>
+          </div>
+          <div class="product">
+            <img
+              class="product_image"
+              src="./images/p2.png"
+              alt="p2"
+            />
+            <div class="product_description">
+              <span class="product_description_category">Cakes</span>
+              <span>
+                Chocolate biscuit coffee cake topped with a buttercream and
+                powder
+              </span>
+            </div>
+            <a
+              class="product_link"
+              href="#"
+            >
+              <img
+                src="./images/arrow.svg"
+                alt="arrow"
+              />
+              Order
+            </a>
+          </div>
+        </div>
+
+        <div class="productsSection_row">
+          <div class="product">
+            <img
+              class="product_image"
+              src="./images/p3.png"
+              alt="p3"
+            />
+            <div class="product_description">
+              <span class="product_description_category">Donuts</span>
+              <span>
+                Light multi-layered croissant strewn with cinammon and almond
+                “petals”
+              </span>
+            </div>
+            <a
+              class="product_link"
+              href="#"
+            >
+              <img
+                src="./images/arrow.svg"
+                alt="arrow"
+              />
+              Order
+            </a>
+          </div>
+          <div class="product">
+            <img
+              class="product_image"
+              src="./images/p4.png"
+              alt="p4"
+            />
+            <div class="product_description">
+              <span class="product_description_category">Donuts</span>
+              <span>
+                Light multi-layered croissant strewn with coconut and nuts
+              </span>
+            </div>
+            <a
+              class="product_link"
+              href="#"
+            >
+              <img
+                src="./images/arrow.svg"
+                alt="arrow"
+              />
+              Order
+            </a>
+          </div>
+        </div>
+        <div class="productsSection_row">
+          <div class="product">
+            <img
+              class="product_image"
+              src="./images/p5.png"
+              alt="p5"
+            />
+            <div class="product_description">
+              <span class="product_description_category">Cakes</span>
+              <span>
+                Cake with chocolate salted caramel, Vanilla frutti pebbles
+                inside
+              </span>
+            </div>
+            <a
+              class="product_link"
+              href="#"
+            >
+              <img
+                src="./images/arrow.svg"
+                alt="arrow"
+              />
+              Order
+            </a>
+          </div>
+          <div class="product">
+            <img
+              class="product_image"
+              src="./images/p6.png"
+              alt="p6"
+            />
+            <div class="product_description">
+              <span class="product_description_category">Cookies</span>
+              <span>
+                Oatmeal cookies with golden raisins, orange zest and chocolate
+                chips
+              </span>
+            </div>
+            <a
+              class="product_link"
+              href="#"
+            >
+              <img
+                src="./images/arrow.svg"
+                alt="arrow"
+              />
+              Order
+            </a>
+          </div>
+        </div>
       </section>
-      <section>
-        <h2>Few words about us</h2>
+      <section class="aboutSection">
+        <img
+          class="aboutSection_background"
+          src="./images/crumbs.png"
+          alt="crumbs"
+        />
+        <div class="aboutSection_description">
+          <h2 class="sectionTitle sectionTitle--about">Few words about us</h2>
+          <div class="aboutSection_description_text">
+            Like many design teams, Onfido made the transition from Abstract +
+            Sketch, to Figma in the last couple of years. One of the common
+            resistance points internally before making that switch, was Figma’s
+            lack of Git-style branching that Abstract enabled. The design team
+            had come to rely on branching and had built a lot of our processes
+            around it.
+          </div>
+        </div>
+        <div class="aboutSection_statistics">
+          <div class="aboutSection_statistics_item">
+            <span>2015</span>
+            <span>Foundation year</span>
+          </div>
+          <div class="aboutSection_statistics_item">
+            <span>23</span>
+            <span>Stores</span>
+          </div>
+          <div class="aboutSection_statistics_item">
+            <span>155</span>
+            <span>Companies</span>
+          </div>
+          <div class="aboutSection_statistics_item">
+            <span>10K+</span>
+            <span>Clients</span>
+          </div>
+        </div>
       </section>
     </main>
   </body>
