--- a/src/index.html
+++ b/src/index.html
@@ -295,5 +295,98 @@
         </div>
       </section>
     </main>
+    <footer>
+      <div class="footerContent">
+        <div class="footerContent_item">
+          <a
+            class="footerLogo"
+            href="#"
+          >
+            <img
+              src="./images/logo-white.svg"
+              alt="logo"
+            />
+          </a>
+          <ul class="footerList">
+            <span class="footerList_title">Menu</span>
+            <li>
+              <a
+                class="footerList_link"
+                href="#products"
+              >
+                Products
+              </a>
+            </li>
+            <li>
+              <a
+                class="footerList_link"
+                href="#about"
+              >
+                About Us
+              </a>
+            </li>
+            <li>
+              <a
+                class="footerList_link"
+                href="#"
+              >
+                Blog
+              </a>
+            </li>
+            <li>
+              <a
+                class="footerList_link"
+                href="#"
+              >
+                Terms & Privacy
+              </a>
+            </li>
+          </ul>
+        </div>
+        <div class="footerContent_item">
+          <span class="sectionTitle sectionTitle--footer">Contact us</span>
+          <div class="footerLists">
+            <ul class="footerList">
+              <span class="footerList_title">Call us</span>
+              <li>
+                <a
+                  class="footerList_link"
+                  href="#"
+                >
+                  (629) 555-0129
+                </a>
+              </li>
+              <li>
+                <a
+                  class="footerList_link"
+                  href="#"
+                >
+                  (603) 555-0123
+                </a>
+              </li>
+              <li>
+                <a
+                  class="footerList_link"
+                  href="#"
+                >
+                  (704) 555-0127
+                </a>
+              </li>
+            </ul>
+            <ul class="footerList">
+              <span class="footerList_title">Email us</span>
+              <li>
+                <a
+                  class="footerList_link"
+                  href="#"
+                >
+                  bakerlab@example.com
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
