creative bakery landing

--- a/src/index.html
+++ b/src/index.html
@@ -1,19 +1,441 @@
 <!doctype html>
-<html lang="en">
+<html
+  lang="en"
+  class="page"
+>
   <head>
     <meta charset="UTF-8" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
-    <title>Title</title>
+    <title>Bakerlab</title>
     <link
       rel="stylesheet"
       href="./styles/main.scss"
     />
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="./images/icons/icon-cookie.svg"
+    />
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
-    <script src="scripts/main.js"></script>
+  <body class="page__body">
+    <header class="header">
+      <div class="top-bar">
+        <a
+          class="top-bar__logo-link"
+          href="#"
+        >
+          <img
+            class="top-bar__logo"
+            src="./images/icons/Logo.svg"
+            alt="Logo"
+          />
+        </a>
+        <a
+          class="top-bar__menu-icon icon"
+          href="#menu"
+        ></a>
+
+        <nav class="nav-desktop">
+          <ul class="nav-desktop__list">
+            <li class="nav-desktop__item">
+              <a
+                href="#what-we-bake"
+                class="nav-desktop__link"
+              >
+                Products
+              </a>
+            </li>
+            <li class="nav-desktop__item">
+              <a
+                href="#about-us"
+                class="nav-desktop__link"
+              >
+                About Us
+              </a>
+            </li>
+            <li class="nav-desktop__item">
+              <a
+                href="https://www.instagram.com/"
+                class="nav-desktop__link"
+                target="_blank"
+              >
+                Blog
+              </a>
+            </li>
+            <li class="nav-desktop__item">
+              <a
+                href="tel: (629) 555-0129"
+                class="nav-desktop__link nav-desktop__link--bold"
+              >
+                Contact us
+              </a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+
+      <div class="header__content">
+        <p class="header__slogan">
+          We bake your fantasies — croissants, cakes, cookies, and cupcakes.
+        </p>
+
+        <h1 class="header__title">Creative bakery</h1>
+
+        <img
+          src="./images/cookie-background.png"
+          alt="Cookie"
+          class="header__cookie"
+        />
+
+        <a
+          href="#"
+          class="header__link"
+        >
+          Learn more
+        </a>
+      </div>
+    </header>
+
+    <aside
+      class="menu page__menu"
+      id="menu"
+    >
+      <div class="menu__content">
+        <div class="menu__top">
+          <a class="menu__logo-link">
+            <img
+              src="./images/icons/Logo.svg"
+              alt="Logo"
+            />
+          </a>
+
+          <a
+            href="#"
+            class="menu__close-icon icon"
+          ></a>
+        </div>
+
+        <div class="menu__nav-wrapper">
+          <nav class="nav">
+            <ul class="nav__list">
+              <li class="nav__item">
+                <a
+                  href="#what-we-bake"
+                  class="nav__link"
+                >
+                  Products
+                </a>
+              </li>
+              <li class="nav__item">
+                <a
+                  href="#about-us"
+                  class="nav__link"
+                >
+                  About Us
+                </a>
+              </li>
+              <li class="nav__item">
+                <a
+                  href="https://www.instagram.com/"
+                  class="nav__link"
+                  target="_blank"
+                >
+                  Blog
+                </a>
+              </li>
+              <li class="nav__item">
+                <a
+                  href="tel: (629) 555-0129"
+                  class="nav__link nav__link--bold"
+                >
+                  Contact Us
+                </a>
+              </li>
+            </ul>
+          </nav>
+        </div>
+      </div>
+    </aside>
+
+    <main class="main">
+      <section
+        class="product"
+        id="what-we-bake"
+      >
+        <h2 class="product__title">What we bake</h2>
+
+        <!-- wwb = what-we-bake -->
+        <p class="product__about">
+          We can customize our cookies right for your needs. Just imagine it
+        </p>
+        <article class="product__first product__card">
+          <img
+            src="./images/products/photo-product-01.png"
+            alt="First Cake"
+            class="product__image"
+          />
+
+          <p class="product__type">Cakes</p>
+          <p class="product__description">
+            Oatmeal cookies with golden raisins, orange zest and chocolate chips
+          </p>
+          <a
+            href="tel: (629) 555-0129"
+            class="product__order"
+          >
+            Order
+          </a>
+        </article>
+
+        <article class="product__second product__card">
+          <img
+            src="./images/products/photo-product-02.png"
+            alt="Second Cake"
+            class="product__image"
+          />
+
+          <p class="product__type">Cakes</p>
+          <p class="product__description">
+            Chocolate biscuit coffee cake topped with a buttercream and powder
+          </p>
+          <a
+            href="tel: (629) 555-0129"
+            class="product__order"
+          >
+            Order
+          </a>
+        </article>
+
+        <article class="product__third product__card">
+          <img
+            src="./images/products/photo-product-03.png"
+            alt="Donut"
+            class="product__image"
+          />
+
+          <p class="product__type">Donuts</p>
+          <p class="product__description">
+            Light multi-layered croissant strewn with cinammon and almond
+            “petals”
+          </p>
+          <a
+            href="tel: (629) 555-0129"
+            class="product__order"
+          >
+            Order
+          </a>
+        </article>
+
+        <article class="product__fourth product__card">
+          <img
+            src="./images/products/photo-product-04.png"
+            alt="Donut"
+            class="product__image"
+          />
+
+          <p class="product__type">Donuts</p>
+          <p class="product__description">
+            Light multi-layered croissant strewn with coconut and nuts
+          </p>
+          <a
+            href="tel: (629) 555-0129"
+            class="product__order"
+          >
+            Order
+          </a>
+        </article>
+
+        <article class="product__fifth product__card">
+          <img
+            src="./images/products/photo-product-05.png"
+            alt="Cake"
+            class="product__image"
+          />
+
+          <p class="product__type">Cakes</p>
+          <p class="product__description product__description--more">
+            сhocolate salted caramel, Vanilla frutti pebbles
+          </p>
+          <a
+            href="tel: (629) 555-0129"
+            class="product__order"
+          >
+            Order
+          </a>
+        </article>
+
+        <article class="product__sixth product__card">
+          <img
+            src="./images/products/photo-product-06.png"
+            alt="Cookies"
+            class="product__image"
+          />
+
+          <p class="product__type">Cookies</p>
+          <p class="product__description">
+            Oatmeal cookies with golden raisins, orange zest and chocolate chips
+          </p>
+          <a
+            href="tel: (629) 555-0129"
+            class="product__order"
+          >
+            Order
+          </a>
+        </article>
+      </section>
+
+      <section
+        class="about-us"
+        id="about-us"
+      >
+        <h2 class="about-us__title">Few words About us</h2>
+
+        <p class="about-us__description">
+          Like many design teams, Onfido made the transition from Abstract +
+          Sketch, to Figma in the last couple of years. One of the common
+          resistance points internally before making that switch, was Figma’s
+          lack of Git-style branching that Abstract enabled. The design team had
+          come to rely on branching and had built a lot of our processes around
+          it.
+        </p>
+
+        <div class="about-us__year">
+          <div class="about-us__stat about-us__pos">2015</div>
+          <div class="about-us__label">Foundation year</div>
+        </div>
+
+        <div class="about-us__stores">
+          <div class="about-us__stat">23</div>
+          <div class="about-us__label">Stores</div>
+        </div>
+
+        <div class="about-us__companies">
+          <div class="about-us__stat">155</div>
+          <div class="about-us__label">Companies</div>
+        </div>
+
+        <div class="about-us__clients">
+          <div class="about-us__stat">10K+</div>
+          <div class="about-us__label about-us--end">Clients</div>
+        </div>
+
+        <div class="about-us__crumbs"></div>
+      </section>
+    </main>
+
+    <footer class="footer">
+      <div class="footer__wrapper">
+        <a
+          href="#"
+          class="footer__logo"
+        ></a>
+
+        <div class="footer__menu">
+          <ul class="footer__list">
+            <span class="footer__title">MENU</span>
+            <li class="footer__item">
+              <a
+                href="#what-we-bake"
+                class="footer__link"
+              >
+                Products
+              </a>
+            </li>
+            <li class="footer__item">
+              <a
+                href="#about-us"
+                class="footer__link"
+              >
+                About Us
+              </a>
+            </li>
+            <li class="footer__item">
+              <a
+                href="https://www.instagram.com/"
+                class="footer__link"
+              >
+                Blog
+              </a>
+            </li>
+            <li class="footer__item">
+              <a
+                href="#"
+                class="footer__link"
+              >
+                Terms & Privacy
+              </a>
+            </li>
+          </ul>
+        </div>
+
+        <h2 class="footer__contact-us">Contact us</h2>
+
+        <div class="footer__call-us">
+          <ul class="footer__list">
+            <span class="footer__title">Call us</span>
+            <li class="footer__item">
+              <a
+                href="tel: (629) 555-0129"
+                class="footer__link"
+              >
+                (629) 555-0129
+              </a>
+            </li>
+            <li class="footer__item">
+              <a
+                href="tel: (603) 555-0123"
+                class="footer__link"
+              >
+                (603) 555-0123
+              </a>
+            </li>
+            <li class="footer__item">
+              <a
+                href="tel: (704) 555-0127"
+                class="footer__link"
+              >
+                (704) 555-0127
+              </a>
+            </li>
+          </ul>
+        </div>
+
+        <div class="footer__email">
+          <span class="footer__title">Email us</span>
+          <a
+            href="mailto:bakerlab@example.com"
+            class="footer__link"
+          >
+            bakerlab@example.com
+          </a>
+        </div>
+
+        <div class="footer__social">
+          <div class="social">
+            <a
+              href="https://www.facebook.com/"
+              class="social__facebook"
+              target="_blank"
+            ></a>
+
+            <a
+              href="https://www.instagram.com/"
+              class="social__instagram"
+              target="_blank"
+            ></a>
+
+            <a
+              href="https://x.com/"
+              class="social__twitter"
+            ></a>
+          </div>
+        </div>
+
+        <span class="footer__rights">© Bakerlab 2022</span>
+      </div>
+    </footer>
   </body>
 </html>
