--- a/src/index.html
+++ b/src/index.html
@@ -110,7 +110,7 @@
 
       <h1 class="hero__title">Creative bakery</h1>
       <img
-        src="./images/Cookie.svg"
+        src="images/Cookie.svg"
         alt="Cookie"
         class="hero__image"
       />
@@ -203,7 +203,7 @@
           <div class="product product--a">
             <div class="product__image-wrapper">
               <img
-                src="./images/Photo-01.svg"
+                src="images/Photo-01.svg"
                 alt="Product card"
                 class="product__image"
               />
@@ -228,7 +228,7 @@
           <div class="product product--b">
             <div class="product__image-wrapper">
               <img
-                src="./images/Photo-2.svg"
+                src="images/Photo-2.svg"
                 alt="Product card"
                 class="product__image"
               />
@@ -253,7 +253,7 @@
           <div class="product product--c">
             <div class="product__image-wrapper">
               <img
-                src="./images/Photo-3.svg"
+                src="images/Photo-3.svg"
                 alt="Product card"
                 class="product__image"
               />
@@ -278,7 +278,7 @@
           <div class="product product--d">
             <div class="product__image-wrapper">
               <img
-                src="./images/Photo-4.svg"
+                src="images/Photo-4.svg"
                 alt="Product card"
                 class="product__image"
               />
@@ -302,7 +302,7 @@
           <div class="product product--e">
             <div class="product__image-wrapper">
               <img
-                src="./images/Photo-5.svg"
+                src="images/Photo-5.svg"
                 alt="Product card"
                 class="product__image"
               />
@@ -326,7 +326,7 @@
           <div class="product product--f">
             <div class="product__image-wrapper">
               <img
-                src="./images/Photo-6.svg"
+                src="images/Photo-6.svg"
                 alt="Product card"
                 class="product__image"
               />
