--- a/src/index.html
+++ b/src/index.html
@@ -110,7 +110,7 @@
 
       <h1 class="hero__title">Creative bakery</h1>
       <img
-        src="images/Cookie.svg"
+        src="./images/Cookie.png"
         alt="Cookie"
         class="hero__image"
       />
@@ -120,7 +120,7 @@
         class="hero__button"
       >
         <img
-          src="./images/icons/Icon-cookie.svg"
+          src="images/icons/Icon-cookie.svg"
           alt="cookie-icon"
           class="hero__button-icon"
         />
@@ -203,7 +203,7 @@
           <div class="product product--a">
             <div class="product__image-wrapper">
               <img
-                src="images/Photo-01.svg"
+                src="./images/photo-product-01.png"
                 alt="Product card"
                 class="product__image"
               />
@@ -228,7 +228,7 @@
           <div class="product product--b">
             <div class="product__image-wrapper">
               <img
-                src="images/Photo-2.svg"
+                src="./images/photo-product-02.png"
                 alt="Product card"
                 class="product__image"
               />
@@ -253,7 +253,7 @@
           <div class="product product--c">
             <div class="product__image-wrapper">
               <img
-                src="images/Photo-3.svg"
+                src="./images/photo-product-03.png"
                 alt="Product card"
                 class="product__image"
               />
@@ -278,7 +278,7 @@
           <div class="product product--d">
             <div class="product__image-wrapper">
               <img
-                src="images/Photo-4.svg"
+                src="./images/photo-product-04.png"
                 alt="Product card"
                 class="product__image"
               />
@@ -302,7 +302,7 @@
           <div class="product product--e">
             <div class="product__image-wrapper">
               <img
-                src="images/Photo-5.svg"
+                src="./images/photo-product-05.png"
                 alt="Product card"
                 class="product__image"
               />
@@ -326,7 +326,7 @@
           <div class="product product--f">
             <div class="product__image-wrapper">
               <img
-                src="images/Photo-6.svg"
+                src="./images/photo-product-06.png"
                 alt="Product card"
                 class="product__image"
               />
